--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-Django==1.11.5
+Django==1.10
 gunicorn==19.7.1
 Pillow==4.3.0
 whitenoise==3.3.1
 dj-database-url==0.4.2
 psycopg2==2.6.2
+django-rest-framework-social-oauth2==1.0.8
+ django-bootstrap3==7.0.1
